--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -15,6 +15,16 @@
   font-weight: bold;
   color: #335bf1;
 }
+#__next{
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+}
 
 .left,
 .right {
