--- a/styles/Shared.module.css
+++ b/styles/Shared.module.css
@@ -64,6 +64,16 @@
   margin-top: 0;
   color: #808080;
 }
+#__next{
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+}
 
 .arrow {
   display: flex;
